--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,10 @@
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
+            android:name=".BashRandom"
             android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.MainActivity"
+
+        <activity android:name=".ui.activity.LaunchActivity"
 
                   android:screenOrientation="portrait"
                   android:configChanges="keyboardHidden|orientation|screenSize"> <!--This tells the system what configuration changes
